--- a/manual/emacspeak_002dgoogle.html
+++ b/manual/emacspeak_002dgoogle.html
@@ -75,8 +75,42 @@
   tbm=</p><span id="Emacspeak_002dGoogle-Commands"></span>
   <h4 class="subsection">12.94.1 Emacspeak-Google
   Commands</h4><span id=
-  "emacspeak_002dgoogle_002dopen_002dlink"></span>
+  "emacspeak_002dgoogle_002dextract_002dfrom_002dcache"></span>
   <h4 class="subsubsection">12.94.1.1
+  emacspeak-google-extract-from-cache</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dgoogle_002dextract_002dfrom_002dcache">
+    Command:
+    <strong>emacspeak-google-extract-from-cache</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dgoogle_002dextract_002dfrom_002dcache-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Extract current  page from the Google cache. 
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dgoogle_002don_002dthis_002dsite"></span>
+  <h4 class="subsubsection">12.94.1.2
+  emacspeak-google-on-this-site</h4>
+  <dl>
+    <dt id="index-emacspeak_002dgoogle_002don_002dthis_002dsite">
+    Command: <strong>emacspeak-google-on-this-site</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dgoogle_002don_002dthis_002dsite-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Perform a google search restricted to the current WWW site.
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dgoogle_002dopen_002dlink"></span>
+  <h4 class="subsubsection">12.94.1.3
   emacspeak-google-open-link</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dopen_002dlink">Command:
@@ -91,7 +125,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dshow_002dtoolbelt"></span>
-  <h4 class="subsubsection">12.94.1.2
+  <h4 class="subsubsection">12.94.1.4
   emacspeak-google-show-toolbelt</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dshow_002dtoolbelt">
@@ -106,7 +140,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dgoogle_002dsign_002din"></span>
-  <h4 class="subsubsection">12.94.1.3 emacspeak-google-sign-in</h4>
+  <h4 class="subsubsection">12.94.1.5 emacspeak-google-sign-in</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dsign_002din">Command:
     <strong>emacspeak-google-sign-in</strong></dt>
@@ -119,7 +153,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dgoogle_002dsign_002dout"></span>
-  <h4 class="subsubsection">12.94.1.4
+  <h4 class="subsubsection">12.94.1.6
   emacspeak-google-sign-out</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dsign_002dout">Command:
@@ -133,8 +167,29 @@
       </div>
     </dd>
   </dl><span id=
+  "emacspeak_002dgoogle_002dsimilar_002dto_002dthis_002dpage"></span>
+  <h4 class="subsubsection">12.94.1.7
+  emacspeak-google-similar-to-this-page</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dgoogle_002dsimilar_002dto_002dthis_002dpage">
+    Command: <strong>emacspeak-google-similar-to-this-page</strong>
+    <em>(url)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dgoogle_002dsimilar_002dto_002dthis_002dpage-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Ask Google to find documents similar to this one.
+
+(fn URL)
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange"></span>
-  <h4 class="subsubsection">12.94.1.5
+  <h4 class="subsubsection">12.94.1.8
   emacspeak-google-toolbelt-change</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dtoolbelt_002dchange">
@@ -150,7 +205,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dShopping"></span>
-  <h4 class="subsubsection">12.94.1.6
+  <h4 class="subsubsection">12.94.1.9
   emacspeak-google-toolbelt-change-Shopping</h4>
   <dl>
     <dt id=
@@ -169,7 +224,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dblog"></span>
-  <h4 class="subsubsection">12.94.1.7
+  <h4 class="subsubsection">12.94.1.10
   emacspeak-google-toolbelt-change-blog</h4>
   <dl>
     <dt id=
@@ -188,7 +243,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dbooks"></span>
-  <h4 class="subsubsection">12.94.1.8
+  <h4 class="subsubsection">12.94.1.11
   emacspeak-google-toolbelt-change-books</h4>
   <dl>
     <dt id=
@@ -207,7 +262,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dbooks_002dformat"></span>
-  <h4 class="subsubsection">12.94.1.9
+  <h4 class="subsubsection">12.94.1.12
   emacspeak-google-toolbelt-change-books-format</h4>
   <dl>
     <dt id=
@@ -226,7 +281,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dbooks_002dtype"></span>
-  <h4 class="subsubsection">12.94.1.10
+  <h4 class="subsubsection">12.94.1.13
   emacspeak-google-toolbelt-change-books-type</h4>
   <dl>
     <dt id=
@@ -245,7 +300,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dbooks_002dviewability"></span>
-  <h4 class="subsubsection">12.94.1.11
+  <h4 class="subsubsection">12.94.1.14
   emacspeak-google-toolbelt-change-books-viewability</h4>
   <dl>
     <dt id=
@@ -264,7 +319,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dcommercial"></span>
-  <h4 class="subsubsection">12.94.1.12
+  <h4 class="subsubsection">12.94.1.15
   emacspeak-google-toolbelt-change-commercial</h4>
   <dl>
     <dt id=
@@ -283,7 +338,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dcommercial_002dprices"></span>
-  <h4 class="subsubsection">12.94.1.13
+  <h4 class="subsubsection">12.94.1.16
   emacspeak-google-toolbelt-change-commercial-prices</h4>
   <dl>
     <dt id=
@@ -302,7 +357,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002ddate_002dfilter"></span>
-  <h4 class="subsubsection">12.94.1.14
+  <h4 class="subsubsection">12.94.1.17
   emacspeak-google-toolbelt-change-date-filter</h4>
   <dl>
     <dt id=
@@ -321,7 +376,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dforums"></span>
-  <h4 class="subsubsection">12.94.1.15
+  <h4 class="subsubsection">12.94.1.18
   emacspeak-google-toolbelt-change-forums</h4>
   <dl>
     <dt id=
@@ -340,7 +395,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dgroup_002ddiscussions"></span>
-  <h4 class="subsubsection">12.94.1.16
+  <h4 class="subsubsection">12.94.1.19
   emacspeak-google-toolbelt-change-group-discussions</h4>
   <dl>
     <dt id=
@@ -359,7 +414,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dimages"></span>
-  <h4 class="subsubsection">12.94.1.17
+  <h4 class="subsubsection">12.94.1.20
   emacspeak-google-toolbelt-change-images</h4>
   <dl>
     <dt id=
@@ -378,7 +433,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002din_002ddepth"></span>
-  <h4 class="subsubsection">12.94.1.18
+  <h4 class="subsubsection">12.94.1.21
   emacspeak-google-toolbelt-change-in-depth</h4>
   <dl>
     <dt id=
@@ -397,7 +452,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dliteral"></span>
-  <h4 class="subsubsection">12.94.1.19
+  <h4 class="subsubsection">12.94.1.22
   emacspeak-google-toolbelt-change-literal</h4>
   <dl>
     <dt id=
@@ -416,7 +471,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dnews"></span>
-  <h4 class="subsubsection">12.94.1.20
+  <h4 class="subsubsection">12.94.1.23
   emacspeak-google-toolbelt-change-news</h4>
   <dl>
     <dt id=
@@ -435,7 +490,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dnon_002dcommercial"></span>
-  <h4 class="subsubsection">12.94.1.21
+  <h4 class="subsubsection">12.94.1.24
   emacspeak-google-toolbelt-change-non-commercial</h4>
   <dl>
     <dt id=
@@ -454,7 +509,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dpatents"></span>
-  <h4 class="subsubsection">12.94.1.22
+  <h4 class="subsubsection">12.94.1.25
   emacspeak-google-toolbelt-change-patents</h4>
   <dl>
     <dt id=
@@ -473,7 +528,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dplaces"></span>
-  <h4 class="subsubsection">12.94.1.23
+  <h4 class="subsubsection">12.94.1.26
   emacspeak-google-toolbelt-change-places</h4>
   <dl>
     <dt id=
@@ -492,7 +547,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002drecent"></span>
-  <h4 class="subsubsection">12.94.1.24
+  <h4 class="subsubsection">12.94.1.27
   emacspeak-google-toolbelt-change-recent</h4>
   <dl>
     <dt id=
@@ -511,7 +566,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002drecipes"></span>
-  <h4 class="subsubsection">12.94.1.25
+  <h4 class="subsubsection">12.94.1.28
   emacspeak-google-toolbelt-change-recipes</h4>
   <dl>
     <dt id=
@@ -530,7 +585,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dreviews"></span>
-  <h4 class="subsubsection">12.94.1.26
+  <h4 class="subsubsection">12.94.1.29
   emacspeak-google-toolbelt-change-reviews</h4>
   <dl>
     <dt id=
@@ -549,7 +604,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dsocial"></span>
-  <h4 class="subsubsection">12.94.1.27
+  <h4 class="subsubsection">12.94.1.30
   emacspeak-google-toolbelt-change-social</h4>
   <dl>
     <dt id=
@@ -568,7 +623,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dsort_002dby_002ddate"></span>
-  <h4 class="subsubsection">12.94.1.28
+  <h4 class="subsubsection">12.94.1.31
   emacspeak-google-toolbelt-change-sort-by-date</h4>
   <dl>
     <dt id=
@@ -587,7 +642,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dstructured_002dsnippets"></span>
-  <h4 class="subsubsection">12.94.1.29
+  <h4 class="subsubsection">12.94.1.32
   emacspeak-google-toolbelt-change-structured-snippets</h4>
   <dl>
     <dt id=
@@ -606,7 +661,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dtimeline"></span>
-  <h4 class="subsubsection">12.94.1.30
+  <h4 class="subsubsection">12.94.1.33
   emacspeak-google-toolbelt-change-timeline</h4>
   <dl>
     <dt id=
@@ -625,7 +680,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dtimeline_002dhigh"></span>
-  <h4 class="subsubsection">12.94.1.31
+  <h4 class="subsubsection">12.94.1.34
   emacspeak-google-toolbelt-change-timeline-high</h4>
   <dl>
     <dt id=
@@ -644,7 +699,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dtimeline_002dlow"></span>
-  <h4 class="subsubsection">12.94.1.32
+  <h4 class="subsubsection">12.94.1.35
   emacspeak-google-toolbelt-change-timeline-low</h4>
   <dl>
     <dt id=
@@ -663,7 +718,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dvideo"></span>
-  <h4 class="subsubsection">12.94.1.33
+  <h4 class="subsubsection">12.94.1.36
   emacspeak-google-toolbelt-change-video</h4>
   <dl>
     <dt id=
@@ -682,7 +737,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dvideo_002dduration"></span>
-  <h4 class="subsubsection">12.94.1.34
+  <h4 class="subsubsection">12.94.1.37
   emacspeak-google-toolbelt-change-video-duration</h4>
   <dl>
     <dt id=
@@ -701,7 +756,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dweb_002dhistory_002dnot_002dvisited"></span>
-  <h4 class="subsubsection">12.94.1.35
+  <h4 class="subsubsection">12.94.1.38
   emacspeak-google-toolbelt-change-web-history-not-visited</h4>
   <dl>
     <dt id=
@@ -720,7 +775,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dtoolbelt_002dchange_002dweb_002dhistory_002dvisited"></span>
-  <h4 class="subsubsection">12.94.1.36
+  <h4 class="subsubsection">12.94.1.39
   emacspeak-google-toolbelt-change-web-history-visited</h4>
   <dl>
     <dt id=
@@ -737,8 +792,26 @@
 </pre>
       </div>
     </dd>
+  </dl><span id=
+  "emacspeak_002dgoogle_002dtranscode_002durl"></span>
+  <h4 class="subsubsection">12.94.1.40
+  emacspeak-google-transcode-url</h4>
+  <dl>
+    <dt id="index-emacspeak_002dgoogle_002dtranscode_002durl">
+    Command: <strong>emacspeak-google-transcode-url</strong>
+    <em>(url)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dgoogle_002dtranscode_002durl-1"></span>
+      <div class="format">
+        <pre class="format">Transcode specified url via Google.
+
+(fn URL)
+</pre>
+      </div>
+    </dd>
   </dl><span id="emacspeak_002dgoogle_002dtts"></span>
-  <h4 class="subsubsection">12.94.1.37 emacspeak-google-tts</h4>
+  <h4 class="subsubsection">12.94.1.41 emacspeak-google-tts</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dtts">Command:
     <strong>emacspeak-google-tts</strong> <em>(text &amp;optional
@@ -754,7 +827,7 @@ Optional interactive prefix arg ‘lang’ specifies  language identifier.
       </div>
     </dd>
   </dl><span id="emacspeak_002dgoogle_002dtts_002dregion"></span>
-  <h4 class="subsubsection">12.94.1.38
+  <h4 class="subsubsection">12.94.1.42
   emacspeak-google-tts-region</h4>
   <dl>
     <dt id="index-emacspeak_002dgoogle_002dtts_002dregion">Command:
@@ -779,7 +852,7 @@ Optional interactive prefix arg ‘lang’ specifies  language identifier.
     </dd>
   </dl><span id=
   "emacspeak_002dgoogle_002dwhat_002dis_002dmy_002dip"></span>
-  <h4 class="subsubsection">12.94.1.39
+  <h4 class="subsubsection">12.94.1.43
   emacspeak-google-what-is-my-ip</h4>
   <dl>
     <dt id=
@@ -790,6 +863,48 @@ Optional interactive prefix arg ‘lang’ specifies  language identifier.
       "index-emacspeak_002dgoogle_002dwhat_002dis_002dmy_002dip-1"></span>
       <div class="format">
         <pre class="format">Show my public IP
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dgoogle_002dwho_002dlinks_002dto_002dthis_002dpage"></span>
+  <h4 class="subsubsection">12.94.1.44
+  emacspeak-google-who-links-to-this-page</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dgoogle_002dwho_002dlinks_002dto_002dthis_002dpage">
+    Command:
+    <strong>emacspeak-google-who-links-to-this-page</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dgoogle_002dwho_002dlinks_002dto_002dthis_002dpage-1">
+      </span>
+      <div class="format">
+        <pre class=
+        "format">Perform a google search to locate documents that link to the
+current page.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dtranscode_002dcurrent_002durl_002dvia_002dgoogle"></span>
+  <h4 class="subsubsection">12.94.1.45
+  emacspeak-transcode-current-url-via-google</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dtranscode_002dcurrent_002durl_002dvia_002dgoogle">
+    Command:
+    <strong>emacspeak-transcode-current-url-via-google</strong>
+    <em>(&amp;optional untranscode)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dtranscode_002dcurrent_002durl_002dvia_002dgoogle-1">
+      </span>
+      <div class="format">
+        <pre class="format">Transcode current URL via Google.
+  Reverse effect with prefix arg.
+
+(fn &amp;optional UNTRANSCODE)
 </pre>
       </div>
     </dd>
