--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -152,12 +152,7 @@ The body can be accessed via ‘emacspeak-muggles-brightness/body’.
     <dt id="index-emacspeak_002dmuggles_002dhideshow_002fbody">
     Command: <strong>emacspeak-muggles-hideshow/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-, h</kbd></dt>
-        <dd><span id="index-C_002d_002c-h"></span></dd>
-        <dt><kbd>C-x @ a h</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-h"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dhideshow_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -423,12 +418,7 @@ The body can be accessed via ‘emacspeak-muggles-undo-only/undo-redo/body’.
     <dt id="index-emacspeak_002dmuggles_002dvuiet_002fbody">
     Command: <strong>emacspeak-muggles-vuiet/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-; v</kbd></dt>
-        <dd><span id="index-C_002d_003b-v"></span></dd>
-        <dt><kbd>C-x @ h v</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-v"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dvuiet_002fbody-1"></span>
       <div class="format">
         <pre class=
