--- a/manual/extra_002dmuggles.html
+++ b/manual/extra_002dmuggles.html
@@ -272,14 +272,7 @@ The body can be accessed via ‘emacspeak-muggles-m-player/body’.
     <dt id="index-emacspeak_002dmuggles_002doutliner_002fbody">
     Command: <strong>emacspeak-muggles-outliner/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-. o</kbd></dt>
-        <dd><span id="index-C_002d_002e-o"></span></dd>
-        <dt><kbd>C-' o</kbd></dt>
-        <dd><span id="index-C_002d_0027-o"></span></dd>
-        <dt><kbd>C-x @ s o</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-o"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002doutliner_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -311,28 +304,8 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"></span>
-  <h4 class="subsubsection">12.227.3.5
-  emacspeak-muggles-pianobar-key-map-cmd</h4>
-  <dl>
-    <dt id=
-    "index-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd">
-    Command:
-    <strong>emacspeak-muggles-pianobar-key-map-cmd</strong></dt>
-    <dd>
-      <dl compact="compact">
-        <dt><kbd>s-'</kbd></dt>
-        <dd><span id="index-s_002d_0027"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd-1"></span>
-      <div class="format">
-        <pre class="format">Temporarily use keymap pianobar-key-map
-</pre>
-      </div>
-    </dd>
-  </dl><span id=
   "emacspeak_002dmuggles_002dsmartparens_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.6
+  <h4 class="subsubsection">12.227.3.5
   emacspeak-muggles-smartparens/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dsmartparens_002fbody">
@@ -384,20 +357,13 @@ The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dview_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.7
+  <h4 class="subsubsection">12.227.3.6
   emacspeak-muggles-view/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dview_002fbody">Command:
     <strong>emacspeak-muggles-view/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-. v</kbd></dt>
-        <dd><span id="index-C_002d_002e-v"></span></dd>
-        <dt><kbd>C-' v</kbd></dt>
-        <dd><span id="index-C_002d_0027-v"></span></dd>
-        <dt><kbd>C-x @ s v</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-s-v"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dmuggles_002dview_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -457,18 +423,12 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dorigami_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.8 emacspeak-origami/body</h4>
+  <h4 class="subsubsection">12.227.3.7 emacspeak-origami/body</h4>
   <dl>
     <dt id="index-emacspeak_002dorigami_002fbody">Command:
     <strong>emacspeak-origami/body</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-, /</kbd></dt>
-        <dd><span id="index-C_002d_002c-_002f"></span></dd>
-        <dt><kbd>C-x @ a /</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-a-_002f"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dorigami_002fbody-1"></span>
+      <span id="index-emacspeak_002dorigami_002fbody-1"></span>
       <div class="format">
         <pre class=
         "format">Call the body in the "emacspeak-origami" hydra.
