--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -1706,11 +1706,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwebutils.html#index-_003cfn_003e-M_002d_003b"><code>
+      "emacspeak_002deww.html#index-_003cfn_003e-M_002d_003b"><code>
       &lt;fn&gt; M-;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dwebutils.html">emacspeak-webutils</a></td>
+      "emacspeak_002deww.html">emacspeak-eww</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2846,6 +2846,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002d_0027-o"><code>C-'
+      o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_0027-q"><code>C-'
       q</code></a>:</td>
       <td>&nbsp;</td>
@@ -2918,11 +2927,29 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002d_0027-v"><code>C-'
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dadvice.html#index-C_002d_002c-_002c"><code>C-,
       ,</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dadvice.html">emacspeak-advice</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002d_002c-_002f"><code>C-,
+      /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -2958,6 +2985,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002c-h"><code>C-,
+      h</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3133,6 +3169,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002d_002e-o"><code>C-.
+      o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002d_002e-q"><code>C-.
       q</code></a>:</td>
       <td>&nbsp;</td>
@@ -3201,6 +3246,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002d_002e-v"><code>C-.
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3315,6 +3369,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_003b-v"><code>C-;
+      v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -5404,11 +5467,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "emacspeak_002dwebutils.html#index-C_002de-M_002d_003b"><code>
-      C-e M-;</code></a>:</td>
+      "emacspeak_002deww.html#index-C_002de-M_002d_003b"><code>C-e
+      M-;</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "emacspeak_002dwebutils.html">emacspeak-webutils</a></td>
+      "emacspeak_002deww.html">emacspeak-eww</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6525,6 +6588,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002dx-_0040-a-_002f"><code>C-x
+      @ a /</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dfeeds.html#index-C_002dx-_0040-a-a"><code>C-x
       @ a a</code></a>:</td>
       <td>&nbsp;</td>
@@ -6556,6 +6628,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dwizards.html">emacspeak-wizards</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-a-h"><code>C-x
+      @ a h</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -6757,6 +6838,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002dx-_0040-h-v"><code>C-x
+      @ h v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-h-w"><code>C-x
       @ h w</code></a>:</td>
       <td>&nbsp;</td>
@@ -6847,6 +6937,15 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002dx-_0040-s-o"><code>C-x @
+      s o</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dwizards.html#index-C_002dx-_0040-s-q"><code>C-x
       @ s q</code></a>:</td>
       <td>&nbsp;</td>
@@ -6915,6 +7014,15 @@
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "soundscape.html">soundscape</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html#index-C_002dx-_0040-s-v"><code>C-x @
+      s v</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
@@ -7087,6 +7195,14 @@
       <th id="Key-Index_ky_letter-S">S</th>
       <td></td>
       <td></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html#index-s_002d_0027"><code>s-'</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "extra_002dmuggles.html">extra-muggles</a></td>
     </tr>
     <tr>
       <td></td>
