--- a/manual/emacspeak_002dwe.html
+++ b/manual/emacspeak_002dwe.html
@@ -69,10 +69,8 @@
   <p>we is for webedit Invoke XSLT to edit/transform Web pages
   before they get rendered. we makes emacspeak’s webedit layer
   independent of a given Emacs web browser EWW This module will use
-  the abstraction provided by browse-url to handle Web pages.
-  Module emacspeak-webutils provides the needed additional
-  abstractions not already covered by browse-url</p><span id=
-  "Emacspeak_002dWe-Commands"></span>
+  the abstraction provided by browse-url to handle Web
+  pages.</p><span id="Emacspeak_002dWe-Commands"></span>
   <h4 class="subsection">12.211.1 Emacspeak-We
   Commands</h4><span id=
   "emacspeak_002dwe_002dclass_002dfilter_002dand_002dfollow"></span>
