--- a/manual/emacspeak_002dwebspace.html
+++ b/manual/emacspeak_002dwebspace.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dwebutils.html" rel="next" title=
-  "emacspeak-webutils" />
+  <link href="emacspeak_002dwidget.html" rel="next" title=
+  "emacspeak-widget" />
   <link href="emacspeak_002dwebsearch.html" rel="prev" title=
   "emacspeak-websearch" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dwebspace"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dwebutils.html" accesskey="n"
-    rel="next">emacspeak-webutils</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dwidget.html" accesskey="n" rel=
+    "next">emacspeak-widget</a>, Previous: <a href=
     "emacspeak_002dwebsearch.html" accesskey="p" rel=
     "prev">emacspeak-websearch</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
@@ -265,8 +265,8 @@ during initialization.
   </dl>
   <hr />
   <div class="header">
-    <p>Next: <a href="emacspeak_002dwebutils.html" accesskey="n"
-    rel="next">emacspeak-webutils</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dwidget.html" accesskey="n" rel=
+    "next">emacspeak-widget</a>, Previous: <a href=
     "emacspeak_002dwebsearch.html" accesskey="p" rel=
     "prev">emacspeak-websearch</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
