--- a/manual/emacspeak_002dwidget.html
+++ b/manual/emacspeak_002dwidget.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dwindmove.html" rel="next" title=
   "emacspeak-windmove" />
-  <link href="emacspeak_002dwebutils.html" rel="prev" title=
-  "emacspeak-webutils" />
+  <link href="emacspeak_002dwebspace.html" rel="prev" title=
+  "emacspeak-webspace" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dwindmove.html" accesskey="n"
     rel="next">emacspeak-windmove</a>, Previous: <a href=
-    "emacspeak_002dwebutils.html" accesskey="p" rel=
-    "prev">emacspeak-webutils</a>, Up: <a href=
+    "emacspeak_002dwebspace.html" accesskey="p" rel=
+    "prev">emacspeak-webspace</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,14 +65,14 @@
   </div>
   <hr />
   <span id="emacspeak_002dwidget-1"></span>
-  <h3 class="section">12.215 emacspeak-widget</h3>
+  <h3 class="section">12.214 emacspeak-widget</h3>
   <p>This module implements the necessary extensions to provide
   talking widgets.</p><span id=
   "Emacspeak_002dWidget-Commands"></span>
-  <h4 class="subsection">12.215.1 Emacspeak-Widget
+  <h4 class="subsection">12.214.1 Emacspeak-Widget
   Commands</h4><span id=
   "emacspeak_002dwidget_002dbrowse_002dwidget_002dinteractively"></span>
-  <h4 class="subsubsection">12.215.1.1
+  <h4 class="subsubsection">12.214.1.1
   emacspeak-widget-browse-widget-interactively</h4>
   <dl>
     <dt id=
@@ -89,7 +89,7 @@
       </div>
     </dd>
   </dl><span id="emacspeak_002dwidget_002dhelp"></span>
-  <h4 class="subsubsection">12.215.1.2 emacspeak-widget-help</h4>
+  <h4 class="subsubsection">12.214.1.2 emacspeak-widget-help</h4>
   <dl>
     <dt id="index-emacspeak_002dwidget_002dhelp">Command:
     <strong>emacspeak-widget-help</strong></dt>
@@ -102,7 +102,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dwidget_002dsummarize_002dparent"></span>
-  <h4 class="subsubsection">12.215.1.3
+  <h4 class="subsubsection">12.214.1.3
   emacspeak-widget-summarize-parent</h4>
   <dl>
     <dt id="index-emacspeak_002dwidget_002dsummarize_002dparent">
@@ -118,7 +118,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dwidget_002dsummarize_002dwidget_002dunder_002dpoint"></span>
-  <h4 class="subsubsection">12.215.1.4
+  <h4 class="subsubsection">12.214.1.4
   emacspeak-widget-summarize-widget-under-point</h4>
   <dl>
     <dt id=
@@ -141,7 +141,7 @@ widget before summarizing.
     </dd>
   </dl><span id=
   "emacspeak_002dwidget_002dupdate_002dfrom_002dminibuffer"></span>
-  <h4 class="subsubsection">12.215.1.5
+  <h4 class="subsubsection">12.214.1.5
   emacspeak-widget-update-from-minibuffer</h4>
   <dl>
     <dt id=
@@ -162,7 +162,7 @@ widget before summarizing.
       </div>
     </dd>
   </dl><span id="emacspeak_002dwidget-Options"></span>
-  <h4 class="subsection">12.215.2 emacspeak-widget Options</h4>
+  <h4 class="subsection">12.214.2 emacspeak-widget Options</h4>
   <dl>
     <dt id="index-User-Option-821">Variable: <strong>User
     Option</strong> <em>voice-widget-button</em></dt>
@@ -222,8 +222,8 @@ widget before summarizing.
   <div class="header">
     <p>Next: <a href="emacspeak_002dwindmove.html" accesskey="n"
     rel="next">emacspeak-windmove</a>, Previous: <a href=
-    "emacspeak_002dwebutils.html" accesskey="p" rel=
-    "prev">emacspeak-webutils</a>, Up: <a href=
+    "emacspeak_002dwebspace.html" accesskey="p" rel=
+    "prev">emacspeak-webspace</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
