--- a/manual/extra_002dmuggles.html
+++ b/manual/extra_002dmuggles.html
@@ -63,7 +63,7 @@
   </div>
   <hr />
   <span id="extra_002dmuggles-1"></span>
-  <h3 class="section">12.227 extra-muggles</h3>
+  <h3 class="section">12.226 extra-muggles</h3>
   <p>MUGGLES == Emacspeak spells for power-users. These are extra
   hydras that I dont use very often, And are being moved here from
   emacspeak-muggles to save time at startup.</p>
@@ -75,13 +75,13 @@
   <p>Note that on newer versions of Emacs, loading this module will
   attempt to automatically install package hydra if it is not
   found.</p><span id="Using-Hydras-1"></span>
-  <h4 class="subsection">12.227.1 Using Hydras</h4>
+  <h4 class="subsection">12.226.1 Using Hydras</h4>
   <p>See the high-level documentation for the Hydra package by
   executing <kbd>C-h C-j</kbd> hydra <kbd>RET</kbd>. The
   documentation in this section uses the same terminology as shown
   in the hydra package documentation.</p><span id=
   "Extra-Muggles"></span>
-  <h4 class="subsection">12.227.2 Extra Muggles</h4>
+  <h4 class="subsection">12.226.2 Extra Muggles</h4>
   <ul>
     <li>View-Mode: <kbd>C-. v</kbd> Temporarily behave like
     view-mode.</li>
@@ -100,10 +100,10 @@
   command <code>emacspeak-hydra-toggle-talkative</code>. As an
   example, Muggle ‘<samp>ViewMode</samp>’ binds <code>s</code> to
   this command.</p><span id="Extra_002dMuggles-Commands"></span>
-  <h4 class="subsection">12.227.3 Extra-Muggles
+  <h4 class="subsection">12.226.3 Extra-Muggles
   Commands</h4><span id=
   "emacspeak_002dmuggles_002demacspeak_002dm_002dplayer_002dmode_002dmap_002dcmd"></span>
-  <h4 class="subsubsection">12.227.3.1
+  <h4 class="subsubsection">12.226.3.1
   emacspeak-muggles-emacspeak-m-player-mode-map-cmd</h4>
   <dl>
     <dt id=
@@ -124,7 +124,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dinfo_002dsummary_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.2
+  <h4 class="subsubsection">12.226.3.2
   emacspeak-muggles-info-summary/body</h4>
   <dl>
     <dt id=
@@ -188,7 +188,7 @@ The body can be accessed via ‘emacspeak-muggles-info-summary/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dm_002dplayer_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.3
+  <h4 class="subsubsection">12.226.3.3
   emacspeak-muggles-m-player/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dm_002dplayer_002fbody">
@@ -266,13 +266,20 @@ The body can be accessed via ‘emacspeak-muggles-m-player/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002doutliner_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.4
+  <h4 class="subsubsection">12.226.3.4
   emacspeak-muggles-outliner/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002doutliner_002fbody">
     Command: <strong>emacspeak-muggles-outliner/body</strong></dt>
     <dd>
-      <span id=
+      <dl compact="compact">
+        <dt><kbd>C-. o</kbd></dt>
+        <dd><span id="index-C_002d_002e-o"></span></dd>
+        <dt><kbd>C-' o</kbd></dt>
+        <dd><span id="index-C_002d_0027-o"></span></dd>
+        <dt><kbd>C-x @ s o</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-s-o"></span></dd>
+      </dl><span id=
       "index-emacspeak_002dmuggles_002doutliner_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -304,8 +311,28 @@ The body can be accessed via ‘emacspeak-muggles-outliner/body’.
       </div>
     </dd>
   </dl><span id=
+  "emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd"></span>
+  <h4 class="subsubsection">12.226.3.5
+  emacspeak-muggles-pianobar-key-map-cmd</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd">
+    Command:
+    <strong>emacspeak-muggles-pianobar-key-map-cmd</strong></dt>
+    <dd>
+      <dl compact="compact">
+        <dt><kbd>s-'</kbd></dt>
+        <dd><span id="index-s_002d_0027"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dmuggles_002dpianobar_002dkey_002dmap_002dcmd-1"></span>
+      <div class="format">
+        <pre class="format">Temporarily use keymap pianobar-key-map
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
   "emacspeak_002dmuggles_002dsmartparens_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.5
+  <h4 class="subsubsection">12.226.3.6
   emacspeak-muggles-smartparens/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dsmartparens_002fbody">
@@ -357,13 +384,20 @@ The body can be accessed via ‘emacspeak-muggles-smartparens/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dview_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.6
+  <h4 class="subsubsection">12.226.3.7
   emacspeak-muggles-view/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dview_002fbody">Command:
     <strong>emacspeak-muggles-view/body</strong></dt>
     <dd>
-      <span id=
+      <dl compact="compact">
+        <dt><kbd>C-. v</kbd></dt>
+        <dd><span id="index-C_002d_002e-v"></span></dd>
+        <dt><kbd>C-' v</kbd></dt>
+        <dd><span id="index-C_002d_0027-v"></span></dd>
+        <dt><kbd>C-x @ s v</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-s-v"></span></dd>
+      </dl><span id=
       "index-emacspeak_002dmuggles_002dview_002fbody-1"></span>
       <div class="format">
         <pre class=
@@ -423,12 +457,18 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dorigami_002fbody"></span>
-  <h4 class="subsubsection">12.227.3.7 emacspeak-origami/body</h4>
+  <h4 class="subsubsection">12.226.3.8 emacspeak-origami/body</h4>
   <dl>
     <dt id="index-emacspeak_002dorigami_002fbody">Command:
     <strong>emacspeak-origami/body</strong></dt>
     <dd>
-      <span id="index-emacspeak_002dorigami_002fbody-1"></span>
+      <dl compact="compact">
+        <dt><kbd>C-, /</kbd></dt>
+        <dd><span id="index-C_002d_002c-_002f"></span></dd>
+        <dt><kbd>C-x @ a /</kbd></dt>
+        <dd><span id="index-C_002dx-_0040-a-_002f"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dorigami_002fbody-1"></span>
       <div class="format">
         <pre class=
         "format">Call the body in the "emacspeak-origami" hydra.
