--- a/manual/Acknowledgments.html
+++ b/manual/Acknowledgments.html
@@ -60,8 +60,8 @@
     "Concept-Index.html" title="Index" rel="index">Index</a>]</p>
   </div>
   <hr />
-  <span id="Acknowledgments_002e"></span>
-  <h2 class="chapter">16 Acknowledgments.</h2>
+  <span id="Acknowledgments-1"></span>
+  <h2 class="chapter">16 Acknowledgments</h2>
   <p>Thanks.</p>
 </body>
 </html>
