--- a/manual/index.html
+++ b/manual/index.html
@@ -110,9 +110,9 @@
       "#toc-Emacspeak-At-Twenty_002e" name=
       "stoc-Emacspeak-At-Twenty_002e">15 Emacspeak At
       Twenty.</a></li>
-      <li><a id="stoc-Acknowledgments_002e" href=
-      "#toc-Acknowledgments_002e" name=
-      "stoc-Acknowledgments_002e">16 Acknowledgments.</a></li>
+      <li><a id="stoc-Acknowledgments-1" href=
+      "#toc-Acknowledgments-1" name="stoc-Acknowledgments-1">16
+      Acknowledgments</a></li>
       <li><a id="stoc-Concept-Index-1" href="#toc-Concept-Index-1"
       rel="index" name="stoc-Concept-Index-1">17 Concept
       Index</a></li>
@@ -11777,9 +11777,9 @@
           "toc-References-1">15.17 References</a></li>
         </ul>
       </li>
-      <li><a id="toc-Acknowledgments_002e" href=
+      <li><a id="toc-Acknowledgments-1" href=
       "Acknowledgments.html#Acknowledgments" name=
-      "toc-Acknowledgments_002e">16 Acknowledgments.</a></li>
+      "toc-Acknowledgments-1">16 Acknowledgments</a></li>
       <li><a id="toc-Concept-Index-1" href=
       "Concept-Index.html#Concept-Index" rel="index" name=
       "toc-Concept-Index-1">17 Concept Index</a></li>
