--- a/manual/emacspeak_002dpianobar.html
+++ b/manual/emacspeak_002dpianobar.html
@@ -183,9 +183,27 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
 </pre>
       </div>
     </dd>
+  </dl><span id="emacspeak_002dpianobar_002dsend_002draw"></span>
+  <h4 class="subsubsection">12.140.3.6
+  emacspeak-pianobar-send-raw</h4>
+  <dl>
+    <dt id="index-emacspeak_002dpianobar_002dsend_002draw">Command:
+    <strong>emacspeak-pianobar-send-raw</strong>
+    <em>(string)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dpianobar_002dsend_002draw-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Send raw string with newline added to pianobar.
+
+(fn STRING)
+</pre>
+      </div>
+    </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dswitch_002dto_002dpreset"></span>
-  <h4 class="subsubsection">12.140.3.6
+  <h4 class="subsubsection">12.140.3.7
   emacspeak-pianobar-switch-to-preset</h4>
   <dl>
     <dt id=
@@ -203,7 +221,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
     </dd>
   </dl><span id=
   "emacspeak_002dpianobar_002dvolume_002ddown"></span>
-  <h4 class="subsubsection">12.140.3.7
+  <h4 class="subsubsection">12.140.3.8
   emacspeak-pianobar-volume-down</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dvolume_002ddown">
@@ -217,7 +235,7 @@ If electric mode is on, keystrokes invoke pianobar commands directly.
       </div>
     </dd>
   </dl><span id="emacspeak_002dpianobar_002dvolume_002dup"></span>
-  <h4 class="subsubsection">12.140.3.8
+  <h4 class="subsubsection">12.140.3.9
   emacspeak-pianobar-volume-up</h4>
   <dl>
     <dt id="index-emacspeak_002dpianobar_002dvolume_002dup">
