--- a/manual/index.html
+++ b/manual/index.html
@@ -6603,26 +6603,33 @@
                   12.140.3.5
                   emacspeak-pianobar-previous-preset</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dpianobar_002dsend_002draw"
+                  href=
+                  "emacspeak_002dpianobar.html#emacspeak_002dpianobar_002dsend_002draw"
+                  name=
+                  "toc-emacspeak_002dpianobar_002dsend_002draw">12.140.3.6
+                  emacspeak-pianobar-send-raw</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dpianobar_002dswitch_002dto_002dpreset"
                   href=
                   "emacspeak_002dpianobar.html#emacspeak_002dpianobar_002dswitch_002dto_002dpreset"
                   name=
                   "toc-emacspeak_002dpianobar_002dswitch_002dto_002dpreset">
-                  12.140.3.6
+                  12.140.3.7
                   emacspeak-pianobar-switch-to-preset</a></li>
                   <li><a id=
                   "toc-emacspeak_002dpianobar_002dvolume_002ddown"
                   href=
                   "emacspeak_002dpianobar.html#emacspeak_002dpianobar_002dvolume_002ddown"
                   name=
-                  "toc-emacspeak_002dpianobar_002dvolume_002ddown">12.140.3.7
+                  "toc-emacspeak_002dpianobar_002dvolume_002ddown">12.140.3.8
                   emacspeak-pianobar-volume-down</a></li>
                   <li><a id=
                   "toc-emacspeak_002dpianobar_002dvolume_002dup"
                   href=
                   "emacspeak_002dpianobar.html#emacspeak_002dpianobar_002dvolume_002dup"
                   name=
-                  "toc-emacspeak_002dpianobar_002dvolume_002dup">12.140.3.8
+                  "toc-emacspeak_002dpianobar_002dvolume_002dup">12.140.3.9
                   emacspeak-pianobar-volume-up</a></li>
                 </ul>
               </li>
